can split panes as needed, import/save templates as well

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <div class="tab"></div>
-    <div class="window">
+    <div class="termWindow">
         <div class="pane">
-
         </div>
 
     </div>
