can get adjacent panes, which will be needed for moving between panes and pane deletes

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <div class="tab"></div>
     <div class="termWindow">
-        <div class="pane">
-        </div>
+        <div class="pane">NEW 0</div>
 
     </div>
 
