Changed how config is saved and added, working on deleting

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="tab"></div>
     <div class="termWindow">
-        <div class="pane">NEW 0</div>
+        <div class="pane" data-order="0">0</div>
 
     </div>
 
