--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 </head>
 <body>
-    <div class="tab"></div>
+    <div class="tab">
+        <div class="tabbar">
+            
+        </div>
+    </div>
     <div class="termWindow">
-        <div class="pane" data-order="0">0</div>
-
+        <div class="pane" data-order="0", data-name="0-pane">0</div>
     </div>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="TermTree.js"></script>
 </body>
 </html>
+<script type="module" src="TermControl.js"></script>
