added small bug fixes

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="tab">
         <div class="tabbar">
-            
+
         </div>
     </div>
     <div class="termWindow">
-        <div class="pane" data-order="0", data-name="0-pane">0</div>
+        <div class="pane" data-order="0", data-name="0-pane"></div>
     </div>
 
     <script type="module" src="TermTree.js"></script>
